--- a/6_CSS/praktikum/file2.html
+++ b/6_CSS/praktikum/file2.html
@@ -50,7 +50,7 @@
       </div>
     </section>
     <footer>
-      <h5>copyright &copy; 2016 by HACKFOX</h5>
+      <h5>copyright &copy; 2016 by Nada Yasinta</h5>
     </footer>
   </body>
 </html>
