--- a/6_CSS/praktikum/file2.html
+++ b/6_CSS/praktikum/file2.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <img id="logo" src="sample-logo.png" width="200px" />
+      <img id="logo" src="sample-logo.png"/>
       <nav>
         <ul>
           <a href="#"><li>Home</li></a>
